session storage check
session storage check

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,3 +69,16 @@
     </form>
 </div>
 <br />
+<br />
+
+<div class="buttons-align">
+    <button type="button" (click)="storeSession()" class="storeButton">
+        Store
+    </button>
+
+    <button type="button" (click)="removeSession()">
+        Remove
+    </button>
+</div>
+<br />
+<br />
